// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineChartWithDynamicAxis should render with various datasets 1`] = `
.c4 {
  display: inline-block;
  position: relative;
}

.c0 .xAxis .tick line {
  opacity: 0;
}

.c0 .xAxis .tick:first-child text {
  text-anchor: start;
}

.c0 .xAxis .tick:last-child text {
  text-anchor: end;
}

.c0 .yAxis .tick line {
  stroke: #F0F0F0;
}

.c0 .context {
  opacity: 0;
  -webkit-transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
}

.c0 .context .brushX .overlay {
  fill: #4475E3;
  fill-opacity: 0.1;
  pointer-events: none;
  height: 0.25rem;
}

.c0 .context .brushX .selection {
  fill: #4475E3;
  fill-opacity: 1;
  height: 1.375rem;
  fill: url(#horizontalGradient);
}

.c0 .context .brushX .handle {
  stroke-width: 0.0625rem;
  stroke: #4475E3;
  stroke-opacity: 0.3;
  fill: #FFFFFF;
  height: 1.375rem;
  width: 0.375rem;
}

.c0 .context .brushY .overlay {
  fill: #4475E3;
  fill-opacity: 0.1;
  pointer-events: none;
  width: 0.25rem;
}

.c0 .context .brushY .selection {
  fill: #4475E3;
  fill-opacity: 1;
  width: 1.375rem;
  fill: url(#verticalGradient);
}

.c0 .context .brushY .handle {
  stroke-width: 0.0625rem;
  stroke: #4475E3;
  stroke-opacity: 0.3;
  fill: #FFFFFF;
  height: 0.375rem;
  width: 1.375rem;
}

.c0 .focus {
  cursor: move;
}

.c0 .line {
  -webkit-clip-path: url(#clip);
  clip-path: url(#clip);
  -webkit-transition: stroke-opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: stroke-opacity 0.3s cubic-bezier(0.45,0.05,0,1);
}

.c0 .area {
  -webkit-clip-path: url(#clip);
  clip-path: url(#clip);
  -webkit-transition: fill-opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: fill-opacity 0.3s cubic-bezier(0.45,0.05,0,1);
}

.c0 .dots {
  -webkit-clip-path: url(#clip);
  clip-path: url(#clip);
}

.c0 .dots .dot {
  -webkit-transition: fill-opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: fill-opacity 0.3s cubic-bezier(0.45,0.05,0,1);
}

.c2 > .tick > text {
  font-family: Inter,sans-serif;
  font-size: 0.625rem;
  line-height: 0.9375rem;
  font-weight: 400;
  font-style: normal;
}

.c3 > .tick > text {
  font-family: Inter,sans-serif;
  font-size: 0.625rem;
  line-height: 0.9375rem;
  font-weight: 400;
  font-style: normal;
}

.c1 .xAxis .tick:first-child text,
.c1 .xAxis .tick:last-child text {
  text-anchor: middle;
}

.c1 .xAxisSecondLevel .tick text {
  text-anchor: start !important;
}

.c1 .focus rect {
  fill: transparent;
  cursor: default;
}

.c1 .focus .cursor {
  stroke: #DBDBDB;
  stroke-dasharray: 2 2;
}

<body>
  <div>
    <div
      class=""
      height="1000"
      style="width: 62.5rem; height: 62.5rem; position: relative;"
      width="1000"
    >
      <svg
        class="c0 c1"
        viewBox="0, 0, 1000, 1000"
      >
        <g
          class="c2 xAxis undefined"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="middle"
          transform="translate(0, 955)"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(55.66981132075472,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              2023
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(236.80188679245285,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              2024
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(417.933962264151,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              2025
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(599.066037735849,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              2026
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(780.1981132075473,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              2027
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(961.3301886792453,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              2028
            </text>
          </g>
        </g>
        <g
          class="c2 xAxis xAxisSecondLevel"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="middle"
          transform="translate(0, 955)"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(55.66981132075472,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
               
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-9586.142611210576,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
               
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-9586.142611210576,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
               
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-9586.142611210576,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
               
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-9586.142611210576,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
               
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(961.3301886792453,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
               
            </text>
          </g>
        </g>
        <g
          class="c3 yAxis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="start"
          transform="translate(28,0)"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0,965.5)"
          >
            <line
              stroke="currentColor"
              x2="960"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-8"
            >
              0
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,774.5)"
          >
            <line
              stroke="currentColor"
              x2="960"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-8"
            >
              100
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,583.5)"
          >
            <line
              stroke="currentColor"
              x2="960"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-8"
            >
              200
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,392.5)"
          >
            <line
              stroke="currentColor"
              x2="960"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-8"
            >
              300
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,201.49999999999994)"
          >
            <line
              stroke="currentColor"
              x2="960"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-8"
            >
              400
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,10.5)"
          >
            <line
              stroke="currentColor"
              x2="960"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-8"
            >
              500
            </text>
          </g>
        </g>
        <g
          class="focus"
        >
          <g
            class="mouse-effects"
          >
            <path
              class="cursor"
            />
          </g>
          <path
            class="line"
            d="M55.16981132075472,716.7L236.30188679245285,795.01L417.433962264151,120.78L598.566037735849,262.12L779.6981132075473,571.5400000000001L960.8301886792453,158.98000000000002"
            data-testid="line"
            fill="none"
            id="line"
            stroke="#00B0D7"
            stroke-opacity="1"
            stroke-width="2"
          />
          <rect
            data-testid="line-chart-with-dynamic-axis-rect"
            height="955"
            transform="translate(28, 10)"
            width="960"
          />
        </g>
        <g
          class="dots"
        >
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1680220800000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1680220800000"
            pointer-events="none"
            r="4"
            transform="translate(55.16981132075472,716.7)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1711785600000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1711785600000"
            pointer-events="none"
            r="4"
            transform="translate(236.30188679245285,795.01)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1743350400000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1743350400000"
            pointer-events="none"
            r="4"
            transform="translate(417.433962264151,120.78)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1774915200000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1774915200000"
            pointer-events="none"
            r="4"
            transform="translate(598.566037735849,262.12)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1806480000000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1806480000000"
            pointer-events="none"
            r="4"
            transform="translate(779.6981132075473,571.5400000000001)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1838044800000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1838044800000"
            pointer-events="none"
            r="4"
            transform="translate(960.8301886792453,158.98000000000002)"
          />
        </g>
      </svg>
      <span
        class="c4"
        data-testid="tooltip-container"
      />
    </div>
  </div>
</body>
`;

exports[`LineChartWithDynamicAxis should render with various datasets 2`] = `
.c4 {
  display: inline-block;
  position: relative;
}

.c0 .xAxis .tick line {
  opacity: 0;
}

.c0 .xAxis .tick:first-child text {
  text-anchor: start;
}

.c0 .xAxis .tick:last-child text {
  text-anchor: end;
}

.c0 .yAxis .tick line {
  stroke: #F0F0F0;
}

.c0 .context {
  opacity: 0;
  -webkit-transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
}

.c0 .context .brushX .overlay {
  fill: #4475E3;
  fill-opacity: 0.1;
  pointer-events: none;
  height: 0.25rem;
}

.c0 .context .brushX .selection {
  fill: #4475E3;
  fill-opacity: 1;
  height: 1.375rem;
  fill: url(#horizontalGradient);
}

.c0 .context .brushX .handle {
  stroke-width: 0.0625rem;
  stroke: #4475E3;
  stroke-opacity: 0.3;
  fill: #FFFFFF;
  height: 1.375rem;
  width: 0.375rem;
}

.c0 .context .brushY .overlay {
  fill: #4475E3;
  fill-opacity: 0.1;
  pointer-events: none;
  width: 0.25rem;
}

.c0 .context .brushY .selection {
  fill: #4475E3;
  fill-opacity: 1;
  width: 1.375rem;
  fill: url(#verticalGradient);
}

.c0 .context .brushY .handle {
  stroke-width: 0.0625rem;
  stroke: #4475E3;
  stroke-opacity: 0.3;
  fill: #FFFFFF;
  height: 0.375rem;
  width: 1.375rem;
}

.c0 .focus {
  cursor: move;
}

.c0 .line {
  -webkit-clip-path: url(#clip);
  clip-path: url(#clip);
  -webkit-transition: stroke-opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: stroke-opacity 0.3s cubic-bezier(0.45,0.05,0,1);
}

.c0 .area {
  -webkit-clip-path: url(#clip);
  clip-path: url(#clip);
  -webkit-transition: fill-opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: fill-opacity 0.3s cubic-bezier(0.45,0.05,0,1);
}

.c0 .dots {
  -webkit-clip-path: url(#clip);
  clip-path: url(#clip);
}

.c0 .dots .dot {
  -webkit-transition: fill-opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: fill-opacity 0.3s cubic-bezier(0.45,0.05,0,1);
}

.c2 > .tick > text {
  font-family: Inter,sans-serif;
  font-size: 0.625rem;
  line-height: 0.9375rem;
  font-weight: 400;
  font-style: normal;
}

.c3 > .tick > text {
  font-family: Inter,sans-serif;
  font-size: 0.625rem;
  line-height: 0.9375rem;
  font-weight: 400;
  font-style: normal;
}

.c1 .xAxis .tick:first-child text,
.c1 .xAxis .tick:last-child text {
  text-anchor: middle;
}

.c1 .xAxisSecondLevel .tick text {
  text-anchor: start !important;
}

.c1 .focus rect {
  fill: transparent;
  cursor: default;
}

.c1 .focus .cursor {
  stroke: #DBDBDB;
  stroke-dasharray: 2 2;
}

<body>
  <div>
    <div
      class=""
      height="1000"
      style="width: 62.5rem; height: 62.5rem; position: relative;"
      width="1000"
    >
      <svg
        class="c0 c1"
        viewBox="0, 0, 1000, 1000"
      >
        <g
          class="c2 xAxis undefined"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="middle"
          transform="translate(0, 955)"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(55.66981132075472,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              9 PM
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(282.08490566037733,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              12 AM
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(508.5,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              3 AM
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(734.9150943396226,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              6 AM
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(961.3301886792453,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              9 AM
            </text>
          </g>
        </g>
        <g
          class="c2 xAxis xAxisSecondLevel"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="middle"
          transform="translate(0, 955)"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(55.66981132075472,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              31 Mar
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(282.08490566037733,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              1 Apr
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-35226283.95283018,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              1 Jan
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-35226283.95283018,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              1 Jan
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-35226283.95283018,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              1 Jan
            </text>
          </g>
        </g>
        <g
          class="c3 yAxis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="start"
          transform="translate(28,0)"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0,965.5)"
          >
            <line
              stroke="currentColor"
              x2="960"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-8"
            >
              0
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,774.5)"
          >
            <line
              stroke="currentColor"
              x2="960"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-8"
            >
              100
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,583.5)"
          >
            <line
              stroke="currentColor"
              x2="960"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-8"
            >
              200
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,392.5)"
          >
            <line
              stroke="currentColor"
              x2="960"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-8"
            >
              300
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,201.49999999999994)"
          >
            <line
              stroke="currentColor"
              x2="960"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-8"
            >
              400
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,10.5)"
          >
            <line
              stroke="currentColor"
              x2="960"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-8"
            >
              500
            </text>
          </g>
        </g>
        <g
          class="focus"
        >
          <g
            class="mouse-effects"
          >
            <path
              class="cursor"
              d="M55.16981132075472,965 55.16981132075472,10"
              style="opacity: 0;"
            />
          </g>
          <path
            class="line"
            d="M55.16981132075472,531.43L281.58490566037733,483.68L508,225.82999999999998L734.4150943396226,563.9000000000001L960.8301886792453,90.21999999999996"
            data-testid="line"
            fill="none"
            id="line"
            stroke="#00B0D7"
            stroke-opacity="1"
            stroke-width="2"
          />
          <rect
            data-testid="line-chart-with-dynamic-axis-rect"
            height="955"
            transform="translate(28, 10)"
            width="960"
          />
        </g>
        <g
          class="dots"
        >
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1680296400000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1680296400000"
            pointer-events="none"
            r="4"
            transform="translate(55.16981132075472,531.43)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1680307200000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1680307200000"
            pointer-events="none"
            r="4"
            transform="translate(281.58490566037733,483.68)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1680318000000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1680318000000"
            pointer-events="none"
            r="4"
            transform="translate(508,225.82999999999998)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1680328800000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1680328800000"
            pointer-events="none"
            r="4"
            transform="translate(734.4150943396226,563.9000000000001)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1680339600000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1680339600000"
            pointer-events="none"
            r="4"
            transform="translate(960.8301886792453,90.21999999999996)"
          />
        </g>
      </svg>
      <span
        class="c4"
        data-testid="tooltip-container"
      />
    </div>
  </div>
</body>
`;

exports[`LineChartWithDynamicAxis should render with various datasets 3`] = `
.c4 {
  display: inline-block;
  position: relative;
}

.c0 .xAxis .tick line {
  opacity: 0;
}

.c0 .xAxis .tick:first-child text {
  text-anchor: start;
}

.c0 .xAxis .tick:last-child text {
  text-anchor: end;
}

.c0 .yAxis .tick line {
  stroke: #F0F0F0;
}

.c0 .context {
  opacity: 0;
  -webkit-transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
}

.c0 .context .brushX .overlay {
  fill: #4475E3;
  fill-opacity: 0.1;
  pointer-events: none;
  height: 0.25rem;
}

.c0 .context .brushX .selection {
  fill: #4475E3;
  fill-opacity: 1;
  height: 1.375rem;
  fill: url(#horizontalGradient);
}

.c0 .context .brushX .handle {
  stroke-width: 0.0625rem;
  stroke: #4475E3;
  stroke-opacity: 0.3;
  fill: #FFFFFF;
  height: 1.375rem;
  width: 0.375rem;
}

.c0 .context .brushY .overlay {
  fill: #4475E3;
  fill-opacity: 0.1;
  pointer-events: none;
  width: 0.25rem;
}

.c0 .context .brushY .selection {
  fill: #4475E3;
  fill-opacity: 1;
  width: 1.375rem;
  fill: url(#verticalGradient);
}

.c0 .context .brushY .handle {
  stroke-width: 0.0625rem;
  stroke: #4475E3;
  stroke-opacity: 0.3;
  fill: #FFFFFF;
  height: 0.375rem;
  width: 1.375rem;
}

.c0 .focus {
  cursor: move;
}

.c0 .line {
  -webkit-clip-path: url(#clip);
  clip-path: url(#clip);
  -webkit-transition: stroke-opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: stroke-opacity 0.3s cubic-bezier(0.45,0.05,0,1);
}

.c0 .area {
  -webkit-clip-path: url(#clip);
  clip-path: url(#clip);
  -webkit-transition: fill-opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: fill-opacity 0.3s cubic-bezier(0.45,0.05,0,1);
}

.c0 .dots {
  -webkit-clip-path: url(#clip);
  clip-path: url(#clip);
}

.c0 .dots .dot {
  -webkit-transition: fill-opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: fill-opacity 0.3s cubic-bezier(0.45,0.05,0,1);
}

.c2 > .tick > text {
  font-family: Inter,sans-serif;
  font-size: 0.625rem;
  line-height: 0.9375rem;
  font-weight: 400;
  font-style: normal;
}

.c3 > .tick > text {
  font-family: Inter,sans-serif;
  font-size: 0.625rem;
  line-height: 0.9375rem;
  font-weight: 400;
  font-style: normal;
}

.c1 .xAxis .tick:first-child text,
.c1 .xAxis .tick:last-child text {
  text-anchor: middle;
}

.c1 .xAxisSecondLevel .tick text {
  text-anchor: start !important;
}

.c1 .focus rect {
  fill: transparent;
  cursor: default;
}

.c1 .focus .cursor {
  stroke: #DBDBDB;
  stroke-dasharray: 2 2;
}

<body>
  <div>
    <div
      class=""
      height="1000"
      style="width: 62.5rem; height: 62.5rem; position: relative;"
      width="1000"
    >
      <svg
        class="c0 c1"
        viewBox="0, 0, 1000, 1000"
      >
        <g
          class="c2 xAxis undefined"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="middle"
          transform="translate(0, 955)"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(55.66981132075472,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              31
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(138.54069552349242,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              14
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(233.25027746947836,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              30
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(316.1211616722161,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              14
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(416.7500924898261,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              31
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(499.6209766925638,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              14
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(591.2317383976651,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              30
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(594.3305586385496,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              30
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(677.2014428412874,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              14
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(777.8303736588975,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              31
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(1044.201072881983,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              14
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(961.3301886792453,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              31
            </text>
          </g>
        </g>
        <g
          class="c2 xAxis xAxisSecondLevel"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="middle"
          transform="translate(0, 955)"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(55.66981132075472,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              Mar
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(138.54069552349242,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              Apr
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-115063.0871254162,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              Jan
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(316.1211616722161,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              May
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-115063.0871254162,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              Jan
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(499.6209766925638,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              Jun
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-115063.0871254162,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              Jan
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-115063.0871254162,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              Jan
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(677.2014428412874,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              Jul
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-115063.0871254162,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              Jan
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(1044.201072881983,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              Sep
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(961.3301886792453,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              Aug
            </text>
          </g>
        </g>
        <g
          class="c3 yAxis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="start"
          transform="translate(28,0)"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0,965.5)"
          >
            <line
              stroke="currentColor"
              x2="960"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-8"
            >
              0
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,774.5)"
          >
            <line
              stroke="currentColor"
              x2="960"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-8"
            >
              100
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,583.5)"
          >
            <line
              stroke="currentColor"
              x2="960"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-8"
            >
              200
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,392.5)"
          >
            <line
              stroke="currentColor"
              x2="960"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-8"
            >
              300
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,201.49999999999994)"
          >
            <line
              stroke="currentColor"
              x2="960"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-8"
            >
              400
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,10.5)"
          >
            <line
              stroke="currentColor"
              x2="960"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-8"
            >
              500
            </text>
          </g>
        </g>
        <g
          class="focus"
        >
          <g
            class="mouse-effects"
          >
            <path
              class="cursor"
              d="M55.16981132075472,965 55.16981132075472,10"
              style="opacity: 0;"
            />
          </g>
          <path
            class="line"
            d="M55.16981132075472,244.92999999999998L138.04069552349242,84.48999999999995L232.75027746947836,231.56L315.6211616722161,323.24L416.2500924898261,155.16000000000003L499.1209766925638,363.35L590.7317383976651,288.86L593.8305586385496,311.7799999999999L676.7014428412874,392L777.3303736588975,437.8399999999999L1043.701072881983,265.94L960.8301886792453,220.1"
            data-testid="line"
            fill="none"
            id="line"
            stroke="#00B0D7"
            stroke-opacity="1"
            stroke-width="2"
          />
          <rect
            data-testid="line-chart-with-dynamic-axis-rect"
            height="955"
            transform="translate(28, 10)"
            width="960"
          />
        </g>
        <g
          class="dots"
        >
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1680296400000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1680296400000"
            pointer-events="none"
            r="4"
            transform="translate(55.16981132075472,244.92999999999998)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1681506000000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1681506000000"
            pointer-events="none"
            r="4"
            transform="translate(138.04069552349242,84.48999999999995)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1682888400000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1682888400000"
            pointer-events="none"
            r="4"
            transform="translate(232.75027746947836,231.56)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1684098000000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1684098000000"
            pointer-events="none"
            r="4"
            transform="translate(315.6211616722161,323.24)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1685566800000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1685566800000"
            pointer-events="none"
            r="4"
            transform="translate(416.2500924898261,155.16000000000003)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1686776400000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1686776400000"
            pointer-events="none"
            r="4"
            transform="translate(499.1209766925638,363.35)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1688113569000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1688113569000"
            pointer-events="none"
            r="4"
            transform="translate(590.7317383976651,288.86)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1688158800000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1688158800000"
            pointer-events="none"
            r="4"
            transform="translate(593.8305586385496,311.7799999999999)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1689368400000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1689368400000"
            pointer-events="none"
            r="4"
            transform="translate(676.7014428412874,392)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1690837200000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1690837200000"
            pointer-events="none"
            r="4"
            transform="translate(777.3303736588975,437.8399999999999)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1694725200000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1694725200000"
            pointer-events="none"
            r="4"
            transform="translate(1043.701072881983,265.94)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1693515600000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1693515600000"
            pointer-events="none"
            r="4"
            transform="translate(960.8301886792453,220.1)"
          />
        </g>
      </svg>
      <span
        class="c4"
        data-testid="tooltip-container"
      />
    </div>
  </div>
</body>
`;

exports[`LineChartWithDynamicAxis should render with various datasets 4`] = `
.c4 {
  display: inline-block;
  position: relative;
}

.c0 .xAxis .tick line {
  opacity: 0;
}

.c0 .xAxis .tick:first-child text {
  text-anchor: start;
}

.c0 .xAxis .tick:last-child text {
  text-anchor: end;
}

.c0 .yAxis .tick line {
  stroke: #F0F0F0;
}

.c0 .context {
  opacity: 0;
  -webkit-transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
}

.c0 .context .brushX .overlay {
  fill: #4475E3;
  fill-opacity: 0.1;
  pointer-events: none;
  height: 0.25rem;
}

.c0 .context .brushX .selection {
  fill: #4475E3;
  fill-opacity: 1;
  height: 1.375rem;
  fill: url(#horizontalGradient);
}

.c0 .context .brushX .handle {
  stroke-width: 0.0625rem;
  stroke: #4475E3;
  stroke-opacity: 0.3;
  fill: #FFFFFF;
  height: 1.375rem;
  width: 0.375rem;
}

.c0 .context .brushY .overlay {
  fill: #4475E3;
  fill-opacity: 0.1;
  pointer-events: none;
  width: 0.25rem;
}

.c0 .context .brushY .selection {
  fill: #4475E3;
  fill-opacity: 1;
  width: 1.375rem;
  fill: url(#verticalGradient);
}

.c0 .context .brushY .handle {
  stroke-width: 0.0625rem;
  stroke: #4475E3;
  stroke-opacity: 0.3;
  fill: #FFFFFF;
  height: 0.375rem;
  width: 1.375rem;
}

.c0 .focus {
  cursor: move;
}

.c0 .line {
  -webkit-clip-path: url(#clip);
  clip-path: url(#clip);
  -webkit-transition: stroke-opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: stroke-opacity 0.3s cubic-bezier(0.45,0.05,0,1);
}

.c0 .area {
  -webkit-clip-path: url(#clip);
  clip-path: url(#clip);
  -webkit-transition: fill-opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: fill-opacity 0.3s cubic-bezier(0.45,0.05,0,1);
}

.c0 .dots {
  -webkit-clip-path: url(#clip);
  clip-path: url(#clip);
}

.c0 .dots .dot {
  -webkit-transition: fill-opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: fill-opacity 0.3s cubic-bezier(0.45,0.05,0,1);
}

.c2 > .tick > text {
  font-family: Inter,sans-serif;
  font-size: 0.625rem;
  line-height: 0.9375rem;
  font-weight: 400;
  font-style: normal;
}

.c3 > .tick > text {
  font-family: Inter,sans-serif;
  font-size: 0.625rem;
  line-height: 0.9375rem;
  font-weight: 400;
  font-style: normal;
}

.c1 .xAxis .tick:first-child text,
.c1 .xAxis .tick:last-child text {
  text-anchor: middle;
}

.c1 .xAxisSecondLevel .tick text {
  text-anchor: start !important;
}

.c1 .focus rect {
  fill: transparent;
  cursor: default;
}

.c1 .focus .cursor {
  stroke: #DBDBDB;
  stroke-dasharray: 2 2;
}

<body>
  <div>
    <div
      class=""
      height="1000"
      style="width: 62.5rem; height: 62.5rem; position: relative;"
      width="1000"
    >
      <svg
        class="c0 c1"
        viewBox="0, 0, 1000, 1000"
      >
        <g
          class="c2 xAxis undefined"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="middle"
          transform="translate(0, 955)"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(55.66981132075472,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              Mar 31
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(182.63154646446836,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              Apr 30
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(313.8253394463058,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              May 31
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(440.7870745900194,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              Jun 30
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(571.9808675718568,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              Jul 31
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(703.1746605536943,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              Aug 31
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(830.1363956974078,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              Sep 30
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(961.3301886792453,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              y="29"
            >
              Oct 31
            </text>
          </g>
        </g>
        <g
          class="c2 xAxis xAxisSecondLevel"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="middle"
          transform="translate(0, 955)"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(55.66981132075472,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              2023
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-82248.86201728092,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              1970
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-82248.86201728092,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              1970
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-82248.86201728092,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              1970
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-82248.86201728092,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              1970
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-82248.86201728092,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              1970
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(-82248.86201728092,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              1970
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(961.3301886792453,0)"
          >
            <line
              stroke="currentColor"
              y2="-955"
            />
            <text
              dy="0em"
              fill="currentColor"
              x="0"
              y="42"
            >
              2023
            </text>
          </g>
        </g>
        <g
          class="c3 yAxis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="start"
          transform="translate(28,0)"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0,965.5)"
          >
            <line
              stroke="currentColor"
              x2="960"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-8"
            >
              0
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,774.5)"
          >
            <line
              stroke="currentColor"
              x2="960"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-8"
            >
              100
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,583.5)"
          >
            <line
              stroke="currentColor"
              x2="960"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-8"
            >
              200
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,392.5)"
          >
            <line
              stroke="currentColor"
              x2="960"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-8"
            >
              300
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,201.49999999999994)"
          >
            <line
              stroke="currentColor"
              x2="960"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-8"
            >
              400
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,10.5)"
          >
            <line
              stroke="currentColor"
              x2="960"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-8"
            >
              500
            </text>
          </g>
        </g>
        <g
          class="focus"
        >
          <g
            class="mouse-effects"
          >
            <path
              class="cursor"
              d="M55.16981132075472,965 55.16981132075472,10"
              style="opacity: 0;"
            />
          </g>
          <path
            class="line"
            d="M55.16981132075472,31.01000000000002L182.13154646446836,19.55000000000001L313.3253394463058,584.91L440.2870745900194,716.7L571.4808675718568,609.74L702.6746605536943,199.08999999999997L829.6363956974078,10L960.8301886792453,583"
            data-testid="line"
            fill="none"
            id="line"
            stroke="#00B0D7"
            stroke-opacity="1"
            stroke-width="2"
          />
          <rect
            data-testid="line-chart-with-dynamic-axis-rect"
            height="955"
            transform="translate(28, 10)"
            width="960"
          />
        </g>
        <g
          class="dots"
        >
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1680296400000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1680296400000"
            pointer-events="none"
            r="4"
            transform="translate(55.16981132075472,31.01000000000002)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1682888400000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1682888400000"
            pointer-events="none"
            r="4"
            transform="translate(182.13154646446836,19.55000000000001)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1685566800000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1685566800000"
            pointer-events="none"
            r="4"
            transform="translate(313.3253394463058,584.91)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1688158800000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1688158800000"
            pointer-events="none"
            r="4"
            transform="translate(440.2870745900194,716.7)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1690837200000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1690837200000"
            pointer-events="none"
            r="4"
            transform="translate(571.4808675718568,609.74)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1693515600000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1693515600000"
            pointer-events="none"
            r="4"
            transform="translate(702.6746605536943,199.08999999999997)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1696107600000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1696107600000"
            pointer-events="none"
            r="4"
            transform="translate(829.6363956974078,10)"
          />
          <circle
            class="dot"
            cursor="default"
            data-testid="dot-1698786000000"
            fill="#2D2D2D"
            fill-opacity="0"
            id="dot-1698786000000"
            pointer-events="none"
            r="4"
            transform="translate(960.8301886792453,583)"
          />
        </g>
      </svg>
      <span
        class="c4"
        data-testid="tooltip-container"
      />
    </div>
  </div>
</body>
`;
